# newsletter-curator

./: .dockerignore  .gitignore  Caddyfile.docker  Dockerfile  README.md  databases.json  docker-compose.yml  hello.py  newsletter-curator-spec.md  pyproject.toml  rxconfig.py  start.sh  test_notion.py
scripts/: run_weekly.py  setup_llm_relay.sh  start_tunnel.py
src/email/: __init__.py  browser.py  extractor.py  fetcher.py
src/intelligence/: __init__.py  exploder.py  feedback.py  prompts.py  router.py  scorer.py
src/notion/: __init__.py  client.py  dedup.py  writer.py
src/storage/: __init__.py  digest.py
src/web/: __init__.py  app.py  state.py
tests/: test_browser.py  test_dedup.py  test_digest.py  test_email.py  test_exploder.py  test_extractor.py  test_feedback.py  test_notion_client.py  test_pipeline.py  test_router.py  test_scorer.py  test_web.py  test_writer.py
